# israel

./: .gitignore  __init__.py  article.jsonl  captchas.jsonl  fullrun.jsonl  home.ipynb  home_classes.ipynb  israeli_times_articles.jsonl  israeli_times_links.jsonl  israeli_times_links_error.jsonl  main.py  pyproject.toml  requirements.in  requirements.txt  result.jsonl  results.csv  results.txt  s.py  scaped_articles.jsonl  scraped_articles_1.jsonl  test.jsonl  titles.jsonl  xx.jsonl
.envlabel/: pyvenv.cfg
annotations/: annotated.csv  annotated2.csv  annotated_.csv  relevancy_train.csv  results.csv  text_class.txt
core/: __init__.py  analytics.py  database.py  driver.py  logger.py  models.py  scraper.py  scroll.py
core/output/: aljazeera_links.jsonl
ner/: __init__.py  annotations.py  main.py  ml_models.py  vectorize.py
notebooks/: checks.ipynb  home_classes.ipynb  main.ipynb
output/: aljazeera.jsonl  aljazeera_data.jsonl  aljazeera_homepage.jsonl  aljazeera_links.jsonl  aljazeera_liveblog.jsonl  data.jsonl  israeli_times_links.jsonl  israelitimes_data.jsonl  israelitimes_links.jsonl  test.jsonl
scrapers/: __init__.py  aljazeera.py
scrapers/aljazeera/: __init__.py  homepage.py  liveblog.py  main.py  news.py  program_news.py
scrapers/israelitimes/: __init__.py  blogs.py  homepage.py  israelitimes.py  liveblog.py  main.py  scrape_article.py
tests/: __init__.py  main.py  test_main.py
